<resources>
    <!-- TODO: App name -->
    <string name="app_name">Google Android Certification</string>

    <!-- TODO: Preferences keys -->
    <string name="pref_is_db_empty">key_is_db_empty</string>

    <!-- TODO: Toolbar menu -->
    <string name="title_action_search">Search</string>
    <string name="title_action_filter">Sort by</string>
    <string name="title_action_settings">Settings</string>
    <string name="title_action_delete">Delete</string>

    <!-- TODO: Drawer menu -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>

    <!-- TODO: TaskListActivity texts -->
    <string name="txt_btn_retry">Retry</string>

    <!-- TODO: TaskAddActivity texts -->
    <string name="add_task">Add new task</string>
    <string name="name">Task name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="save">Save</string>

    <!-- TODO: TaskAddActivity texts -->
    <string name="state">State</string>
    <string name="update">Update</string>

    <!-- TODO: Dialogs -->
    <string name="btn_dialog_ok">OK</string>
    <string name="btn_dialog_cancel">Cancel</string>
    <string name="btn_dialog_yes">Yes</string>
    <string name="btn_dialog_no">No</string>
    <string name="title_dialog_sort_by">Sort by?</string>
    <string name="title_dialog_delete">Delete task</string>
    <string name="msg_dialog_delete">Are you sure you want to delete %s?</string>

    <!-- TODO: WorkerManager keys -->
    <string name="key_worker_tag">WORKER_TAG</string>
    <string name="key_task_name">TASK_NAME</string>
    <string name="key_task_obj">TASK_OBJ</string>

    <!-- TODO: Notifications -->
    <string name="channel_id">me.brunofelix.googlecertapp</string>
    <string name="channel_name">Google Android Certification</string>
    <string name="channel_description">Notifies the schedule of created tasks.</string>
    <string name="notification_content">Do not forget! Let\'\s get it DONE</string>

    <!-- TODO: Accessibility -->
    <string name="float_add">Float add</string>
</resources>